--- a/views/routes/404.html
+++ b/views/routes/404.html
@@ -4,13 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic Informational Site</title>
+    <title>404 - Page Not Found</title>
+
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 
 <body>
-    <h1>404</h1>
-    <span>Page Not Found</span>
-    <button type="button"><a href="/">Home</a></button>
+    <main class="error-page">
+        <h1>404 - Page Not Found</h1>
+        <span>We're sorry, but the page you requested cannot be found.</span>
+        <button type="button"><a href="/">Return to Home</a></button>
+    </main>
 </body>
 
 </html>
