--- a/views/routes/about.html
+++ b/views/routes/about.html
@@ -5,16 +5,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic Informational Site</title>
+
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 
 <body>
-    <h1>About Me</h1>
+    <header>
+        <h3>InfoHub</h3>
+        <nav>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/contact-me">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/contact-me">Contact</a></li>
-    </ul>
+    <main>
+        <h2>About Prabhakar Yadav</h2>
+        <p>Hello, I'm Prabhakar Yadav, an enthusiastic individual with a passion for all things tech-related. I aspire
+            to
+            become a skilled software developer, and I'm excited to share a bit about myself with you.</p>
+
+        <p>My journey into the world of software development began with a deep fascination for computers and technology.
+            From tinkering with code to exploring the latest innovations, my curiosity knows no bounds.</p>
+
+        <p>This website is a testament to my dedication and love for programming. I crafted it using JavaScript,
+            leveraging the power of Node.js to host a robust server that makes it all possible.</p>
+
+        <div>If you'd like to see more of my work, feel free to check out my <a href="https://github.com/karprabha"
+                target="_blank">GitHub profile</a>. It's a repository of my coding adventures and
+            projects, where I continue to learn, create, and contribute to the world of software development.</div>
+
+    </main>
+
+    <footer>
+        <p>&copy; 2023 Basic Informational Site</p>
+    </footer>
 </body>
 
 </html>
